// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`progressBar > renders correctly when value < 0 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="-250"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 0%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders correctly when value > 100 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="250"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 100%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders correctly with label, labelDescription and showProgress, direction column 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        >
          <label
            class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Label
          </label>
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a"
          >
            Label
          </span>
        </div>
        <label
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--textAlign__1giziax0: right;"
        >
          40%
        </label>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders correctly with label, labelDescription and showProgress, direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        >
          Label
        </label>
        <span
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a"
        >
          Label
        </span>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        style="--_4k0ekn0: fit-content;"
      >
        <label
          class="styles_withSuffix__1pj5z8n2 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        >
          40%
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders correctly with label, labelDescription as ReactNode, direction column 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: 100%;"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        >
          <label
            class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            Label
          </label>
          <div>
            Label
          </div>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders correctly with label, labelDescription as ReactNode, direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        >
          Label
        </label>
        <div>
          Label
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders correctly with max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
    >
      <label
        class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
      >
        label
      </label>
      <div
        aria-valuemax="10"
        aria-valuemin="0"
        aria-valuenow="4"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders correctly with only label, direction column 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: 100%;"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        >
          label
        </label>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders correctly with only showProgress, direction column 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_right_xxsmall__toi52u71"
        style="--_4k0ekn0: 100%;"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        />
        <label
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--textAlign__1giziax0: right;"
        >
          40%
        </label>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders correctly with only showProgress, direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        style="--_4k0ekn0: fit-content;"
      >
        <label
          class="styles_withSuffix__1pj5z8n2 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        >
          40%
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders correctly with suffix and prefix, direction column 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: 100%;"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        >
          label
        </label>
        <label
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          style="--textAlign__1giziax0: right;"
        >
          prefix40suffix
        </label>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders correctly with suffix and prefix, direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_1rem_xxsmall__toi52u3v"
    >
      <label
        class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
      >
        label
      </label>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        style="--_4k0ekn0: fit-content;"
      >
        <label
          class="styles_withSuffix__1pj5z8n2 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        >
          prefix40suffix
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_danger__1pj5z8n9 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders info 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_info__1pj5z8nb styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_primary__1pj5z8n6 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders progression 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles__1pj5z8n4"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_success__1pj5z8n8 styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`progressBar > renders warning 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="40"
        class="styles__1pj5z8n1"
        role="progressbar"
      >
        <div
          class="styles_warning__1pj5z8na styles__1pj5z8n5"
          style="--cfx4pp0: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
